--- a/Angebot.html
+++ b/Angebot.html
@@ -18,7 +18,7 @@
 
             <nav class="navigation container">
                 <a href="index.html">
-                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                    <img src="Images/Alle_Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
                 </a>
                 <div class="navigation-list">
                     <ul class="seiten">
@@ -68,7 +68,7 @@
                         #diversity</p>
                 </article>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
                 <article class="article2">
                     <h2> Ähnlich aber anders </h2>
                     <p>Anders als ähnliche Plattformen bieten wir ausschliesslich Lebensmittel zum Kochen und keine
@@ -77,30 +77,38 @@
                         Betriebes einsehen und deinem Warenkorb hinzufügen.</p>
                 </article>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
 
                 <article class="article3">
-                    <h2> Wie funktioniert NARA? </h2>
-                    <ol>
-                        <li class="schritte">Wähle deine gewünschten Händler:innen</li>
+                    <div class="article3_text">
+                        <h2> Wie funktioniert NARA? </h2>
+                        <ol>
+                            <li class="schritte">Wähle deine gewünschten Händler:innen</li>
+                        </ol>
                         <div>
                             <button class="platform">Entdecke unsere Platform</button>
                         </div>
-                        <li class="schritte">Stell dir mühelos deine Bestellung zusammen</li>
-                        <li class="schritte">Bestellung abschliessen</li>
-                        <li class="schritte">Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
-                    </ol>
+                        <ol start="2">
+                            <li class="schritte">Stell dir mühelos deine Bestellung zusammen</li>
+                            <li class="schritte">Bestellung abschliessen</li>
+                            <li class="schritte">Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
+                        </ol>
 
-                    <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und gleichzeitig
-                        Geld zu
-                        sparen.</p>
+                        <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und
+                            gleichzeitig
+                            Geld zu
+                            sparen.</p>
 
-                    <button class="registrieren">hier kannst du dich kostenlos registrieren</button>
-
-                    <img src="Images/Angebot/02_angebot_gemüseteller.svg" alt="bild_gemüseteller" class="gemueseteller">
+                        <button class="registrieren">hier kannst du dich kostenlos registrieren</button>
+                    </div>
+                    <div class="article3_bild">
+                        <img src="Images/Angebot/02_angebot_gemueseteller.svg" alt="bild_gemüseteller"
+                            class="gemueseteller">
+                    </div>
                 </article>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
 
                 <article class="article4">
                     <h2>Das ist uns wichtig</h2>
@@ -113,7 +121,7 @@
                     <p>Du willst mehr erfahren? Auf unserer Über uns Seite findest du weitere Informationen</p>
                 </article>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
 
                 <article class="article5">
                     <h2> Unsere Partner:innen in deiner Umgebung</h2>
@@ -146,8 +154,8 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
-                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
-                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
+                <img src="Images/Alle_Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                <img src="Images/Alle_Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
             </nav>
         </footer>
     </div>
