--- a/Impressum.html
+++ b/Impressum.html
@@ -18,7 +18,7 @@
 
             <nav class="navigation container">
                 <a href="index.html">
-                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                    <img src="Images/Alle_Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
                 </a>
                 <div class="navigation-list">
                     <ul class="seiten">
@@ -80,8 +80,8 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
-                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram">
-                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin">
+                <img src="Images/Alle_Seiten/00_instagram.svg" alt="Icon Instagram">
+                <img src="Images/Alle_Seiten/00_linkedin.svg" alt="Icon Linkedin">
             </nav>
         </footer>
 
