--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <nav class="navigation container">
                 <a href="index.html">
-                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                    <img src="Images/Alle_Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
                 </a>
                 <div class="navigation-list">
                     <ul class="seiten">
@@ -73,7 +73,7 @@
                     </div>
 
                 </article>
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
 
 
@@ -86,7 +86,7 @@
                         <input class="buttons" id="mehr-button" type="submit" value="Erfahre mehr">
                     </form>
                 </article>
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
 
                 <article class="article3">
@@ -97,10 +97,10 @@
                             <input class="buttons" id="warum-button" type="submit" value="Erfahre warum">
                         </form>
                     </article>
-                    <img src="Images/Startseite/01_startseite_menü.svg" alt="Menü" class="menue1">
+                    <img src="Images/Startseite/01_startseite_menue.svg" alt="Menü" class="menue1">
                 </article>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
                 <article class="article4">
                     <h2>Begrüsse Naraly, unsere KI-basierte Chef-Köchin</h2>
@@ -113,7 +113,7 @@
                         <input class="buttons" id="Naraly-Button" type="submit" value="Naraly kennenlernen">
                     </form>
                 </article>
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
 
                 <article class="article5">
@@ -123,7 +123,7 @@
                         Ortschaften einzuführen und unsere Reichweite zu vergrössern. #ausbernfürbern</p>
                     <div class="partner">
                         <img src="Images/Startseite/01_startseite_denner.png" alt="01_startseite_denner" class="logopartner">
-                        <img src="Images/Startseite/01_startseite_rüedu.png" alt="01_startseite_rüedu" class="logopartner">
+                        <img src="Images/Startseite/01_startseite_ruedu.png" alt="01_startseite_rüedu" class="logopartner">
                         <img src="Images/Startseite/01_startseite_alnatura.png" alt="01_startseite_alnatura"
                             class="logopartner">
                         <img src="Images/Startseite/01_startseite_migros.png" alt="01_startseite_migros" class="logopartner">
@@ -139,7 +139,7 @@
             </div>
             <div class="footerbild">
                 <img src="Images/Startseite/01_startseite_rote_zwiebel.svg" alt="zwiebel" class="imgzwiebel">
-                <img src="Images/Startseite/01_startseite_gemüse.svg" alt="gemüse" class="startseite-gemuese">
+                <img src="Images/Startseite/01_startseite_gemuese.svg" alt="gemüse" class="startseite-gemuese">
 
                 <img src="Images/Startseite/01_startseite_footer.png" alt="footer grün" class="footer-grün">
             </div>
@@ -153,8 +153,8 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
-                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
-                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
+                <img src="Images/Alle_Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                <img src="Images/Alle_Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
             </nav>
         </footer>
 
