--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -18,7 +18,7 @@
 
             <nav class="navigation container">
                 <a href="index.html">
-                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                    <img src="Images/Alle_Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
                 </a>
                 <div class="navigation-list">
                     <ul class="seiten">
@@ -60,7 +60,7 @@
                   <img src="Images/Über uns/03_über uns_baum_mit_büsche.svg" alt="baum" class="imgbaum">
                 </div>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
                 <article class="article2">
                 <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
@@ -74,7 +74,7 @@
                     </form>
                 </article>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
                 <article class="article3">
                 <h2>Team: bunt aufgestellt</h2>
@@ -121,7 +121,7 @@
                     Boxen für sich entdeckt.</p>
                 </article>
 
-                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
+                <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
                 <article class="article8">
                 <h2>Hintergrund: Vier junge Köpfe, ein gemeinsames Ziel</h2>
@@ -154,8 +154,8 @@
                     <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
-                <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
-                <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
+                <img src="Images/Alle_Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                <img src="Images/Alle_Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
             </nav>
         </footer>
         
