--- a/Kontakt.html
+++ b/Kontakt.html
@@ -18,7 +18,7 @@
 
             <nav class="navigation container">
                 <a href="index.html">
-                    <img src="Images/Alle Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                    <img src="Images/Alle_Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
                 </a>
                 <div class="navigation-list">
                     <ul class="seiten">
@@ -82,8 +82,8 @@
                             <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
                             <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                         </ul>
-                        <img src="Images/Alle Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
-                        <img src="Images/Alle Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
+                        <img src="Images/Alle_Seiten/00_instagram.svg" alt="Icon Instagram" class="instagram">
+                        <img src="Images/Alle_Seiten/00_linkedin.svg" alt="Icon Linkedin" class="linkedin">
                     </nav>
                 </footer>
 
