--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -35,15 +35,17 @@
         </header>
 
         <main class="main">
-            <img src="Images/Über uns/03_über uns_header.svg" alt="headerbild" class="headerbild">
-            <img src="Images/Über uns/03_über uns_einkaufsladen.svg" alt="einkaufsladen" class="imgeinkaufsladen">
-            <form class="form-container">
-            </form>
+            <div class="headerbild">
+                <img src="Images/Über_uns/03_über_uns_header.svg" alt="headerbild" class="headerbild">
+                <h1>Über uns</h1>
+            </div>
 
             <div class="container">
-                <h1>Über uns</h1>
+                <div class="title">
+                    <img src="Images/Über_uns/03_über_uns_einkaufsladen.svg" alt="einkaufsladen" class="imgeinkaufsladen">
+                </div>
+            
                 <article class="article1">
-
                     <h2>Unsere Mission: nachhaltig leben soll kein Privileg sein</h2>
                     <p>Wir sind jung, wir sind umweltbewusst. Um dem Klimawandel Einhalt zu bieten ist es
                         wichtig, dass jede:r Einzelne seinen Beitrag leistet. NARA bietet Zugang zu
@@ -54,10 +56,10 @@
 
                 <div class="video-container">
                 <video controls>
-                    <source src="Video/Video.mp4" type="video/mp4" alt="video" class="video">
+                    <source src="Video/Video.mp4" type="video/mp4" class="video">
                   </video>
-                  <img src="Images/Über uns/03_über uns_tanne.svg" alt="tanne" class="imgtanne">
-                  <img src="Images/Über uns/03_über uns_baum_mit_büsche.svg" alt="baum" class="imgbaum">
+                  <img src="Images/Über_uns/03_über_uns_tanne.svg" alt="tanne" class="imgtanne">
+                  <img src="Images/Über_uns/03_über_uns_baum_mit_büsche.svg" alt="baum" class="imgbaum">
                 </div>
 
                 <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
@@ -70,7 +72,7 @@
                     Ressource, die Erde, zu schützen. Werde Teil unserer Community!
                     #innerewertezählen</p>
                     <form class="form-container">
-                        <input class="buttons" id="front-button" type="submit" value="Jetzt registrieren">
+                        <input class="buttons" id="front-button1" type="submit" value="Jetzt registrieren">
                     </form>
                 </article>
 
@@ -81,7 +83,7 @@
                  </article>
 
                  <article class="article4">
-                    <img src="Images/Über uns/03_über uns_rabih.svg" alt="rabih" class="imgrabih">
+                    <img src="Images/Über_uns/03_über_uns_rabih.svg" alt="rabih" class="imgrabih">
                 <p>Rabih ist mit seiner Expertise für Fotografie und
                     Gestaltung der kreative Kopf des Unternehmens. Mit
                     seinem Auge fürs Detail, die Natur und den Menschen
@@ -92,7 +94,7 @@
                 </article>
 
                 <article class="article5">
-                    <img src="Images/Über uns/03_über uns_anna.svg" alt="anna" class="imganna">
+                    <img src="Images/Über_uns/03_über_uns_anna.svg" alt="anna" class="imganna">
                 <p>Anna ist strategische Multitaskerin und übernimmt die
                     organisatorischen Aufgaben im Team. Mit umfangreichen
                     Erfahrungen im Bereich von Sustainable Business bringt
@@ -102,7 +104,7 @@
                 </article>
 
                 <article class="article6">
-                    <img src="Images/Über uns/03_über uns_nadia.svg" alt="nadia" class="imgnadia">
+                    <img src="Images/Über_uns/03_über_uns_nadia.svg" alt="nadia" class="imgnadia">
                 <p>Nadia ist unsere Marketing-Expertin, aber auch in der
                     Gestaltung und Zusammenarbeit mit Partnern eine
                     wertvolle Ressource. Neben dem Berufsalltag entwirft
@@ -111,7 +113,7 @@
                 </article>
 
                 <article class="article7">
-                    <img src="Images/Über uns/03_über uns_aglaja.svg" alt="aglaja" class="imgaglaja">
+                    <img src="Images/Über_uns/03_über_uns_aglaja.svg" alt="aglaja" class="imgaglaja">
                 <p>Aglaja ist die treibende Kraft hinter der
                     Unternehmenskommunikation, sowohl intern als auch
                     extern. Mit ihrer aufgestellten, positiven Art sorgt sie für
@@ -136,15 +138,15 @@
                     schliesslich zum Spotpreis in deinem Einkaufswagen. Ein Einkauf mit NARA verbindet Engagement 
                     mit Genuss!</p>
                         <form class="form-container">
-                            <input class="buttons" id="front-button" type="submit" value="Entdecke unsere Plattform">
+                            <input class="buttons" id="front-button2" type="submit" value="Entdecke unsere Plattform">
                         </form>
                     </article>
                 </div>
                
             <div class="footerbild">
-                <img src="Images/Über uns/03_über uns_footer.svg" alt="footerbild" class="footerbild">
-                <img src="Images/Über uns/03_über uns_pfanne_kochen.svg" alt="pfanne" class="imgpfanne">
-                <img src="Images/Über uns/03_über uns_brokkoli.svg" alt="brokkoli" class="imgbrokkoli">
+                <img src="Images/Über_uns/03_über_uns_footer.svg" alt="footerbild" class="footerbild">
+                <img src="Images/Über_uns/03_über_uns_pfanne_kochen.svg" alt="pfanne" class="imgpfanne">
+                <img src="Images/Über_uns/03_über_uns_brokkoli.svg" alt="brokkoli" class="imgbrokkoli">
              </div>
         </main>
 
