Über uns Update 2.0

--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -83,7 +83,7 @@
                  </article>
 
                  <article class="article4">
-                    <img src="Images/Über_uns/03_über_uns_rabih.svg" alt="rabih" class="imgrabih">
+                    <img src="Images/Über_uns/03_über_uns_rabih.svg" alt="rabih" class="imgrabih">
                 <p>Rabih ist mit seiner Expertise für Fotografie und
                     Gestaltung der kreative Kopf des Unternehmens. Mit
                     seinem Auge fürs Detail, die Natur und den Menschen
