--- a/Angebot.html
+++ b/Angebot.html
@@ -126,26 +126,32 @@
                 <article class="article5">
                     <h2> Unsere Partner:innen in deiner Umgebung</h2>
                     <p> Gib hier deine Postleitzahl ein und entdecke alle unsere Betriebe in deiner Umgebung </p>
+                    <div class="interaktive_karte">
+                        <div class="interaktive_karte_text">
+                            <p>PLZ</p>
+                            <input type="text" id="plz" name="plz" placeholder="z.B. 3000">
 
-                    <p>PLZ</p>
-                    <input type="text" id="plz" name="plz" placeholder="z.B. 3000">
+                            <p>Händler:innen in 3000 Bern:</p>
+                            <ul>
+                                <li class="haendler">Rüedu&nbsp;Länggasse</li>
+                                <li class="haendler">Migros&nbsp;Marktgasse</li>
+                                <li class="haendler">Coop&nbsp;Marktgasse</li>
+                                <li class="haendler">Hofladen&nbsp;Liebefeld</li>
 
-                    <p>Händler:innen in 3000 Bern:</p>
-                    <ul>
-                        <li class="haendler">Rüedu Länggasse</li>
-                        <li class="haendler">Migros Marktgasse</li>
-                        <li class="haendler">Coop Marktgasse</li>
-                        <li class="haendler">Hofladen Liebefeld</li>
+                            </ul>
 
-                    </ul>
-
-                    <button class="allehaendler">komplette Liste</button>
-
-                    <img src="Images/Angebot/02_angebot_karte.png" alt="Karte Bern" class="karte_bern">
+                            <button class="allehaendler">komplette Liste</button>
+                        </div>
+                        <div class="interaktive_karte_bild">
+                            <img src="Images/Angebot/02_angebot_karte.png" alt="Karte Bern" class="karte_bern">
+                        </div>
+                    </div>
                 </article>
             </div>
             <img src="Images/Angebot/02_angebot_spinat.svg" alt="spinat" class="spinat">
             <img src="Images/Angebot/02_angebot_footer.svg.png" alt="footer_grün" class="bildfooter">
+
+
 
         </main>
         <footer class="footer">
