--- a/Impressum.html
+++ b/Impressum.html
@@ -57,7 +57,7 @@
                     </article>
                     <article class="geschaeftsfuehrerinnen">
                         <H2>Geschäftsführer:innen:</H2>
-                        <P>Aglaja Bohm <br> Anna Abegglen <br> Haj-Hassan <br> Nadia Giliberti</P>
+                        <P>Aglaja Bohm <br> Anna Abegglen <br> Rabih Haj-Hassan <br> Nadia Giliberti</P>
 
                         <P>Gründung 2023</P>
                         <P>© Copyright NARA GmbH, 3007 Bern, Schweiz</P>
