Über uns Update

--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -79,7 +79,8 @@
                 <article class="article3">
                 <h2>Team: bunt aufgestellt</h2>
                  </article>
-
+            <div class="team">
+                <div>
                  <article class="article4">
                     <img src="Images/Über_uns/03_über_uns_rabih.svg" alt="rabih" class="imgrabih">
                 <p>Rabih ist mit seiner Expertise für Fotografie und
@@ -90,7 +91,9 @@
                     mit seinen Freund:innen und ist begeisterter Sportler,
                     vor allem in der Natur.</p>
                 </article>
+                </div>
 
+                <div>
                 <article class="article5">
                     <img src="Images/Über_uns/03_über_uns_anna.svg" alt="anna" class="imganna">
                 <p>Anna ist strategische Multitaskerin und übernimmt die
@@ -100,7 +103,9 @@
                     Strategien mit. Als Ausgleich dient ihr das Tanzen und
                     ihre grosse Liebe: ihr Hund Azra.</p>
                 </article>
+                </div>
 
+                <div>
                 <article class="article6">
                     <img src="Images/Über_uns/03_über_uns_nadia.svg" alt="nadia" class="imgnadia">
                 <p>Nadia ist unsere Marketing-Expertin, aber auch in der
@@ -109,7 +114,9 @@
                     sie gerne nachhaltige Rezepte für Freunde und Familie
                     und unternimmt aufregende Ausflüge in den Bergen.</p>
                 </article>
+                </div>
 
+                <div>
                 <article class="article7">
                     <img src="Images/Über_uns/03_über_uns_aglaja.svg" alt="aglaja" class="imgaglaja">
                 <p>Aglaja ist die treibende Kraft hinter der
@@ -120,6 +127,8 @@
                     leidenschaftliche Tänzerin und hat im letzten Jahr das
                     Boxen für sich entdeckt.</p>
                 </article>
+                </div>
+                </div>
 
                 <img src="Images/Alle_Seiten/00_trennstrich.svg" alt="00_trennstrich" class="trennstrich">
 
