--- a/Impressum.html
+++ b/Impressum.html
@@ -18,7 +18,7 @@
 
             <nav class="navigation container">
                 <a href="index.html">
-                    <img src="Images/Alle_Seiten/00_logo_nara.svg" alt="Logo Nara" class="naralogo">
+                    <img src="Images/Alle_Seiten/00_logo_nara.svg" alt="Name Unternehmen" class="naralogo">
                 </a>
                 <div class="navigation-list">
                     <ul class="seiten">
@@ -45,7 +45,6 @@
 
         <main class="main">
             <div class="container">
-
                 <section class="flex-column">
                     <article class="naragmbh">
                         <h2>NARA GmbH</h2>
