--- a/Kontakt.html
+++ b/Kontakt.html
@@ -35,7 +35,7 @@
         </header>
 
         <div class="headerbild"> 
-            <img src="Images/Kontakt/04_kontakt_header.png" class="headerbild">
+            <img src="Images/Kontakt/04_kontakt_header.png" class="headerbild" alt="grüne wolke">
             <h1>Kontakt</h1>
         </div>
 
